--- a/src/es/components/organisms/footer/custom-/custom-.html
+++ b/src/es/components/organisms/footer/custom-/custom-.html
@@ -17,7 +17,7 @@
                 </ul>
             </div>
             <div class=footer-links-row>
-                <h4><strong>Folge uns!</strong></h4>
+                <h4><strong class="custom-css">Folge uns!</strong></h4>
                 <div>
                     <ul class=social-links>
                         <li><a href=#>
