--- a/src/es/components/organisms/footer/custom-/custom-.css
+++ b/src/es/components/organisms/footer/custom-/custom-.css
@@ -8,3 +8,6 @@
   --footer-custom-invert-orange-background-color: green;
   --footer-custom-invert-orange-color: var(--footer-custom-invert-orange-color-custom, var(--footer-custom-invert-color));
 }
+.custom-css {
+  font-size: 40px !important;
+}
