add custom button

--- a/src/css/variablesCustom.css
+++ b/src/css/variablesCustom.css
@@ -27,4 +27,6 @@
   --teaser-round-figcaption-color: var(--color-secondary);
   --teaser-tile-rounded-h6-figcaption-color-custom: var(--color-secondary);
   --title-border-display: none;
+  /* !!! see home.html > footer !!!  */
+  --custom-button-background-color:yellow;
 }
