--- a/src/es/components/organisms/footer/default-/default-.html
+++ b/src/es/components/organisms/footer/default-/default-.html
@@ -20,6 +20,9 @@
             <div class=footer-links-row>
                 <h4><strong>Folge uns!</strong></h4>
                 <div>
+                    <a-button namespace=custom-button->Custom</a-button>
+                </div>
+                <div>
                     <ul class=social-links>
                         <li><a href=#>
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" version="1.1" xml:space="preserve" x="0px" y="0px" width="26px" height="26px">
