--- a/src/es/components/pages/BlockGrid.html
+++ b/src/es/components/pages/BlockGrid.html
@@ -14,36 +14,53 @@
     </a>
 </a-emotion-pictures>
 <hr />
-<o-wrapper namespace=wrapper-teaser->
-    <o-body-style background-color=#003a56 color=var(--m-white)>
-        <o-wrapper href="/">
-            <a-picture namespace="picture-scale-up-" hover-on-parent-shadow-root-host
-                defaultSource="../../../../img/jcr_content.webp" alt="Jcr Content">
-            </a-picture>
-            <div width="67%">
-                <p class="bold">Nachhaltigkeit in der Gemeinschaftsgastronomie</p>
-                <h2 class="line-height-one-em">Weil es nur eine Erde gibt: Unser Engagement für eine nachhaltige
-                    Zukunft.</h2>
-                <a-arrow move="" hover-on-parent-shadow-root-host="" direction="right">
-                </a-arrow>
-            </div>
-        </o-wrapper>
-    </o-body-style>
-</o-wrapper>
+<o-grid namespace="grid-12er-">
+    <div col-lg="6" col-md="8" col-sm="12">
+        <div style="background: lightgray; min-height: 50px;">
+            <strong>col-sm="12"</strong> Size on mobile <br />
+            <strong>col-md="8"</strong> Size on tablet (will fallback to mobile)
+            <strong>col-lg="6"</strong> Size on desktop (will fallback to tablet/mobile)
+        </div>
+    </div>
+    <div col-lg="2" col-sm="6">
+        <div style="background: lightgray; min-height: 50px;"></div>
+    </div>
+    <div col-lg="4" col-sm="6">
+        <div style="background: lightgray; min-height: 50px;"></div>
+    </div>
+    <div col-lg="4" col-sm="6">
+        <div style="background: lightgray; min-height: 50px;"></div>
+    </div>
+    <div col-lg="4" col-sm="6">
+        <div style="background: lightgray; min-height: 50px;"></div>
+    </div>
+    <div col-lg="4" col-sm="6">
+        <div style="background: lightgray; min-height: 50px;"></div>
+    </div>
+</o-grid>
 <hr />
-<div>
-    <h6 class="title-border">Die Catering Services der Migros</h6>
-    <p>Wir sind Ihre Experten für die schönsten Momente im Arbeits- und Lernalltag: die Pausen.</p>
-    <p>Vom ausgewogenen Lunch, über den Snack bis zum Apéro setzen wir alles daran, Sie mit gesunden und feinen
-        Kreationen und Produkten zu verpflegen. Ob Automatenbewirtschaftung, Mahlzeitenlieferung oder umfassende
-        Betriebsführung; ob Unternehmen, Schule, Hochschule oder Universität – unsere Fachleute freuen sich, mit Ihnen
-        eine Lösung zu entwickeln, massgeschneidert auf Ihre Bedürfnisse.</p>
-    <a href="bahh">Test Link</a>
-    <a-button>Hello</a-button>
-    <a-button disabled>Hello</a-button>
-    <a-button namespace="button-primary-">Hello</a-button>
-    <a-button namespace="button-primary-" disabled>Hello</a-button>
-    <a-button namespace="button-secondary-">Hello</a-button>
-    <a-button namespace="button-secondary-" disabled>Hello</a-button>
-</div>
-<hr />
+<o-grid namespace="grid-12er-" mobile-breakpoint="600px" tablet-breakpoint="1300px">
+    <div col-lg="6" col-md="8" col-sm="12">
+        <div style="background: lightgray; min-height: 50px;">
+            <strong>col-sm="12"</strong> Size on mobile <br />
+            <strong>col-md="8"</strong> Size on tablet (will fallback to mobile)
+            <strong>col-lg="6"</strong> Size on desktop (will fallback to tablet/mobile)
+        </div>
+    </div>
+    <div col-lg="2" col-sm="6">
+        <div style="background: lightgray; min-height: 50px;"></div>
+    </div>
+    <div col-lg="4" col-sm="6">
+        <div style="background: lightgray; min-height: 50px;"></div>
+    </div>
+    <div col-lg="4" col-sm="6">
+        <div style="background: lightgray; min-height: 50px;"></div>
+    </div>
+    <div col-lg="4" col-sm="6">
+        <div style="background: lightgray; min-height: 50px;"></div>
+    </div>
+    <div col-lg="4" col-sm="6">
+        <div style="background: lightgray; min-height: 50px;"></div>
+    </div>
+</o-grid>
+
