--- a/src/es/components/molecules/navigation/default-/default-.html
+++ b/src/es/components/molecules/navigation/default-/default-.html
@@ -1,4 +1,4 @@
-<m-navigation-two hover="false" namespace="navigation-two-default-" namespace-fallback hit-area="false" focus-lost-close no-scroll>
+<m-navigation hover="false" namespace="navigation-default-" namespace-fallback hit-area="false" focus-lost-close no-scroll>
     <ul>
         <li>
             <a href="#">Menü</a>
